Updated backend and frontend files with bug fixes and improvements